# LCR

./: .gitignore  CMakeLists.txt  GD32F470.sct  dap_config.cfg  gd32f450z_flash.ld  startup_gd32f450.S
.eide/: eide.json  target 1.arm.options.v6.json
.pack/GigaDevice/GD32F4xx_DFP.3.0.3/: GigaDevice.GD32F4xx_DFP.pdsc
.pack/GigaDevice/GD32F4xx_DFP.3.0.3/Device/F403/Firmware/Peripherals/inc/: gd32f403_adc.h  gd32f403_bkp.h  gd32f403_can.h  gd32f403_crc.h  gd32f403_ctc.h  gd32f403_dac.h  gd32f403_dbg.h  gd32f403_dma.h  gd32f403_exmc.h  gd32f403_exti.h  gd32f403_fmc.h  gd32f403_fwdgt.h  gd32f403_gpio.h  gd32f403_i2c.h  gd32f403_misc.h  gd32f403_pmu.h  gd32f403_rcu.h  gd32f403_rtc.h  gd32f403_sdio.h  gd32f403_spi.h  gd32f403_timer.h  gd32f403_usart.h  gd32f403_wwdgt.h
.pack/GigaDevice/GD32F4xx_DFP.3.0.3/Device/F403/Firmware/Peripherals/src/: gd32f403_adc.c  gd32f403_bkp.c  gd32f403_can.c  gd32f403_crc.c  gd32f403_ctc.c  gd32f403_dac.c  gd32f403_dbg.c  gd32f403_dma.c  gd32f403_exmc.c  gd32f403_exti.c  gd32f403_fmc.c  gd32f403_fwdgt.c  gd32f403_gpio.c  gd32f403_i2c.c  gd32f403_misc.c  gd32f403_pmu.c  gd32f403_rcu.c  gd32f403_rtc.c  gd32f403_sdio.c  gd32f403_spi.c  gd32f403_timer.c  gd32f403_usart.c  gd32f403_wwdgt.c
.pack/GigaDevice/GD32F4xx_DFP.3.0.3/Device/F403/Include/: gd32f403.h  gd32f403_libopt.h
.pack/GigaDevice/GD32F4xx_DFP.3.0.3/Device/F403/Source/: system_gd32f403.c
.pack/GigaDevice/GD32F4xx_DFP.3.0.3/Device/F403/Source/ARM/: startup_gd32f403.s
.pack/GigaDevice/GD32F4xx_DFP.3.0.3/Device/F403/Utilities/: gd32f403z_eval.c  gd32f403z_eval.h
.pack/GigaDevice/GD32F4xx_DFP.3.0.3/Device/F4XX/Include/: gd32f4xx_libopt.h
.pack/GigaDevice/GD32F4xx_DFP.3.0.3/Flash/: GD32F403.FLM  GD32F4xx_1MB.FLM  GD32F4xx_2MB.FLM  GD32F4xx_3MB.FLM  GD32F4xx_512KB.FLM
.pack/GigaDevice/GD32F4xx_DFP.3.0.3/SVD/: GD32F403.SFR  GD32F4xx.SFR
App/Include/: my_app.h
App/Source/: app_task.c
Firmware/CMSIS/GD/GD32F4xx/Source/: system_gd32f4xx.c
Hardware/Include/: adc.h  bl1555.h  bsp_key.h  bsp_lcd.h  bsp_led.h  bsp_norflash_spi.h  bsp_nvic.h  bsp_sdram_exmc.h  bsp_usart.h  dac.h  dma.h  gpio.h  matlab_communicate.h  pga113.h  spi.h  st7789.h  tim.h
Hardware/Source/: adc.c  bl1555.c  bsp_key.c  bsp_norflash_spi.c  bsp_nvic.c  bsp_sdram_exmc.c  bsp_usart.c  dac.c  dma.c  gpio.c  lcd.c  pga113.c  spi.c  st7789.c  tim.c
Project/: .gitignore  GD32F470.uvoptx  GD32F470.uvprojx
User/: FreeRTOSConfig.h  FreeRTOSHook.c  gd32f4xx_direct_io.h  gd32f4xx_it.c  gd32f4xx_it.h  gd32f4xx_tim_it.c  main.c  main.h  retarget.c  retarget.h  systick.c
